--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 <img src="https://lh3.googleusercontent.com/a/ACg8ocL7F_eQjkWnB4RhC0VdU0gIchORO6HZjIPIQPvvTHCC9O1SPxw4=s288-c-no" 
                      alt="Profile" 
                      class="profile-image">
-                <h2><i class="fas fa-robot"></i> Personal AI Assistant</h2>
+                <h2>Priyanshu's Conversational AI ChatBot</h2>
             </div>
             <div class="social-links">
                 <a href="https://linkedin.com/in/priyanshu-patel-hawk" target="_blank">
